--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lcp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://uliakarpova.github.io/hakaton",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
