--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hakaton",
   "version": "1.0.0",
-  "description": "Сервер для тинерактивной карты для формирования границ территорий Москвы в целях комплексного развития",
+  "description": "Сервер для интерактивной карты для формирования границ территорий Москвы в целях комплексного развития",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
